@@ -36,7 +36,6 @@
 
 div.form
 {
-	margin: 0;
 }
 
 div.form input,
